# newhope

./: .gitignore  .gitmodules  Cargo.toml  README.md
benches/: kex.rs
cnewhope/: Cargo.toml  README.md  build.rs  keygen_poly.c  lib.rs
cnewhope/benches/: bench.rs
cnewhope/tests/: test_cnewhope.rs
src/: batcher.rs  error_correction.rs  lib.rs  newhope.rs  ntt.rs  params.rs  poly.rs  reduce.rs
