[package]
name = "newhope"
version = "0.1.6"
authors = ["quininer kel <quininer@live.com>"]
description = "Post-quantum key exchange - a new hope."
repository = "https://github.com/quininer/newhope"
license = "MIT"

[dependencies]
rand = "0.3"
tiny-keccak = "1.1"
byteorder = "1.0"

[features]
default = [ "api" ]
api = []
tor = []
