[package]
name = "newhope"
version = "0.3.0"
authors = ["quininer kel <quininer@live.com>"]
description = "Post-quantum key exchange - a new hope."
repository = "https://github.com/quininer/newhope"
license = "MIT"

[dependencies]
rand = "0.4"
tiny-keccak = "^1.4"
byteorder = "1.0"

[features]
tor = []
